--- a/test.html
+++ b/test.html
@@ -4,13 +4,14 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Kodluyoruz</title>
+  <title>Document</title>
 </head>
 <body>
-  <p>Lorem, ipsum dolor.</p>
-  <p>Laborum, excepturi veritatis!</p>
-  <p>Esse, assumenda odio.</p>
-  <p>Blanditiis, vero reiciendis!</p>
-  <p>Iusto, blanditiis itaque!</p>
+  <ul>
+    <li></li>
+    <li></li>
+    <li></li>
+    <li></li>
+  </ul>
 </body>
 </html>
