--- a/loginform.html
+++ b/loginform.html
@@ -7,9 +7,10 @@
   <title>Document</title>
 </head>
 <body>
-  <form action="">
-    <input type="text"
-    ><button>Submit</button>
-  </form>
+  <ul>
+    <li><a href="">Lorem, ipsum.</a></li>
+    <li><a href="">Quidem, possimus.</a></li>
+    <li><a href="">Unde, rem.</a></li>
+  </ul>
 </body>
 </html>
