--- a/loginform.html
+++ b/loginform.html
@@ -7,10 +7,9 @@
   <title>Document</title>
 </head>
 <body>
-  <ul>
-    <li><a href="">Lorem, ipsum.</a></li>
-    <li><a href="">Quidem, possimus.</a></li>
-    <li><a href="">Unde, rem.</a></li>
-  </ul>
+  <p>Lorem ipsum dolor sit.</p>
+  <p>Officia odit nulla dolorum?</p>
+  <p>Blanditiis placeat tempore dolorem.</p>
+  <p>Hic rerum dolor dolore?</p>
 </body>
 </html>
